[package]
name = "indi-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"  # Required for Cargo lock v4 format
description = "A Rust implementation of the INDI (Instrument Neutral Distributed Interface) protocol"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ivonnyssen/indi-rs"
documentation = "https://docs.rs/indi-rs"
readme = "README.md"
keywords = ["indi", "astronomy", "instrumentation", "protocol"]
categories = ["aerospace", "network-programming", "api-bindings"]

[dependencies]
bytes = "1.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
async-trait = "0.1.74"
base64 = "0.22.1"
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
quick-xml = "0.37.2"
colored = "2.1.0"

[dev-dependencies]
mockall = { version = "0.13.1", features = [] }
