[package]
name = "indi-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"  # MSRV
description = "A Rust implementation of the INDI (Instrument Neutral Distributed Interface) protocol"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ivonnyssen/indi-rs"
documentation = "https://docs.rs/indi-rs"
readme = "README.md"
keywords = ["indi", "astronomy", "instrumentation", "protocol"]
categories = ["aerospace", "network-programming", "api-bindings"]

[dependencies]
bytes = "1.5.0"
thiserror = "2.0.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
async-trait = "0.1.74"
base64 = "0.22.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
quick-xml = { version = "0.37.0", features = ["serialize", "serde-types", "async-tokio"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
colored = "3.0.0"
serde_path_to_error = "0.1.14"
regex = "1.10.3"
lazy_static = "1.4.0"

# Dependencies needed for minimal-versions
[target.'cfg(any())'.dependencies]
sharded-slab = { version = "0.1.7", optional = true }

[dev-dependencies]
mockall = { version = "0.13.1", features = [] }
